--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>IC Notary</title>
+    <title>hello</title>
     <base href="/" />
+
+    <link type="text/css" rel="stylesheet" href="main.css" />
   </head>
   <body>
     <div id="root"></div>
