--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>hello</title>
     <base href="/" />
+    <link rel="icon" type="image/png" href="/assets/favicon.png" />
 
     <link type="text/css" rel="stylesheet" href="main.css" />
   </head>
